build/log/idf_py_stdout_output_2871191
[1/9] Performing build step for 'bootloader'
[1/1] cd /home/matthewf/esp/gnss_pss_processing/build/bootloader/esp-idf/esptool_py && /home/matthewf/.espressif/python_env/idf5.5_py3.12_env/bin/python /home/matthewf/skyworks/prep/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 /home/matthewf/esp/gnss_pss_processing/build/bootloader/bootloader.bin
Bootloader binary size 0x5220 bytes. 0x2de0 bytes (36%) free.
[2/9] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj 
/home/matthewf/.espressif/tools/riscv32-esp-elf/esp-14.2.0_20241119/riscv32-esp-elf/bin/riscv32-esp-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.5-dev-1050-gb5ac4fbdf9\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/matthewf/esp/gnss_pss_processing/build/config -I/home/matthewf/skyworks/prep/esp-idf/components/newlib/platform_include -I/home/matthewf/skyworks/prep/esp-idf/components/freertos/config/include -I/home/matthewf/skyworks/prep/esp-idf/components/freertos/config/include/freertos -I/home/matthewf/skyworks/prep/esp-idf/components/freertos/config/riscv/include -I/home/matthewf/skyworks/prep/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/matthewf/skyworks/prep/esp-idf/components/freertos/FreeRTOS-Kernel/portable/riscv/include -I/home/matthewf/skyworks/prep/esp-idf/components/freertos/FreeRTOS-Kernel/portable/riscv/include/freertos -I/home/matthewf/skyworks/prep/esp-idf/components/freertos/esp_additions/include -I/home/matthewf/skyworks/prep/esp-idf/components/esp_hw_support/include -I/home/matthewf/skyworks/prep/esp-idf/components/esp_hw_support/include/soc -I/home/matthewf/skyworks/prep/esp-idf/components/esp_hw_support/include/soc/esp32c3 -I/home/matthewf/skyworks/prep/esp-idf/components/esp_hw_support/dma/include -I/home/matthewf/skyworks/prep/esp-idf/components/esp_hw_support/ldo/include -I/home/matthewf/skyworks/prep/esp-idf/components/esp_hw_support/debug_probe/include -I/home/matthewf/skyworks/prep/esp-idf/components/esp_hw_support/mspi_timing_tuning/include -I/home/matthewf/skyworks/prep/esp-idf/components/esp_hw_support/port/esp32c3/. -I/home/matthewf/skyworks/prep/esp-idf/components/esp_hw_support/port/esp32c3/include -I/home/matthewf/skyworks/prep/esp-idf/components/heap/include -I/home/matthewf/skyworks/prep/esp-idf/components/heap/tlsf -I/home/matthewf/skyworks/prep/esp-idf/components/log/include -I/home/matthewf/skyworks/prep/esp-idf/components/soc/include -I/home/matthewf/skyworks/prep/esp-idf/components/soc/esp32c3 -I/home/matthewf/skyworks/prep/esp-idf/components/soc/esp32c3/include -I/home/matthewf/skyworks/prep/esp-idf/components/soc/esp32c3/register -I/home/matthewf/skyworks/prep/esp-idf/components/hal/platform_port/include -I/home/matthewf/skyworks/prep/esp-idf/components/hal/esp32c3/include -I/home/matthewf/skyworks/prep/esp-idf/components/hal/include -I/home/matthewf/skyworks/prep/esp-idf/components/esp_rom/include -I/home/matthewf/skyworks/prep/esp-idf/components/esp_rom/esp32c3/include -I/home/matthewf/skyworks/prep/esp-idf/components/esp_rom/esp32c3/include/esp32c3 -I/home/matthewf/skyworks/prep/esp-idf/components/esp_rom/esp32c3 -I/home/matthewf/skyworks/prep/esp-idf/components/esp_common/include -I/home/matthewf/skyworks/prep/esp-idf/components/esp_system/include -I/home/matthewf/skyworks/prep/esp-idf/components/esp_system/port/soc -I/home/matthewf/skyworks/prep/esp-idf/components/esp_system/port/include/riscv -I/home/matthewf/skyworks/prep/esp-idf/components/esp_system/port/include/private -I/home/matthewf/skyworks/prep/esp-idf/components/riscv/include -I/home/matthewf/skyworks/prep/esp-idf/components/spi_flash/include -I/home/matthewf/skyworks/prep/esp-idf/components/esp_driver_uart/include -I/home/matthewf/skyworks/prep/esp-idf/components/driver/deprecated -I/home/matthewf/skyworks/prep/esp-idf/components/driver/i2c/include -I/home/matthewf/skyworks/prep/esp-idf/components/driver/touch_sensor/include -I/home/matthewf/skyworks/prep/esp-idf/components/driver/twai/include -I/home/matthewf/skyworks/prep/esp-idf/components/esp_pm/include -I/home/matthewf/skyworks/prep/esp-idf/components/esp_ringbuf/include -I/home/matthewf/skyworks/prep/esp-idf/components/esp_driver_gpio/include -I/home/matthewf/skyworks/prep/esp-idf/components/esp_driver_pcnt/include -I/home/matthewf/skyworks/prep/esp-idf/components/esp_driver_gptimer/include -I/home/matthewf/skyworks/prep/esp-idf/components/esp_driver_spi/include -I/home/matthewf/skyworks/prep/esp-idf/components/esp_driver_mcpwm/include -I/home/matthewf/skyworks/prep/esp-idf/components/esp_driver_ana_cmpr/include -I/home/matthewf/skyworks/prep/esp-idf/components/esp_driver_i2s/include -I/home/matthewf/skyworks/prep/esp-idf/components/esp_driver_sdmmc/include -I/home/matthewf/skyworks/prep/esp-idf/components/sdmmc/include -I/home/matthewf/skyworks/prep/esp-idf/components/esp_driver_sdspi/include -I/home/matthewf/skyworks/prep/esp-idf/components/esp_driver_sdio/include -I/home/matthewf/skyworks/prep/esp-idf/components/esp_driver_dac/include -I/home/matthewf/skyworks/prep/esp-idf/components/esp_driver_rmt/include -I/home/matthewf/skyworks/prep/esp-idf/components/esp_driver_tsens/include -I/home/matthewf/skyworks/prep/esp-idf/components/esp_driver_sdm/include -I/home/matthewf/skyworks/prep/esp-idf/components/esp_driver_i2c/include -I/home/matthewf/skyworks/prep/esp-idf/components/esp_driver_ledc/include -I/home/matthewf/skyworks/prep/esp-idf/components/esp_driver_parlio/include -I/home/matthewf/skyworks/prep/esp-idf/components/esp_driver_usb_serial_jtag/include -march=rv32imc_zicsr_zifencei  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -nostartfiles -Og -fno-shrink-wrap -fmacro-prefix-map=/home/matthewf/esp/gnss_pss_processing=. -fmacro-prefix-map=/home/matthewf/skyworks/prep/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -c /home/matthewf/esp/gnss_pss_processing/main/main.c
/home/matthewf/esp/gnss_pss_processing/main/main.c: In function 'send_ubx_command':
/home/matthewf/esp/gnss_pss_processing/main/main.c:140:5: error: implicit declaration of function 'ESP_LOGI'; did you mean 'ESP_OK'? [-Wimplicit-function-declaration]
  140 |     ESP_LOGI("UBX", "Sent UBX command");
      |     ^~~~~~~~
      |     ESP_OK
/home/matthewf/esp/gnss_pss_processing/main/main.c: In function 'app_main':
/home/matthewf/esp/gnss_pss_processing/main/main.c:164:21: warning: passing argument 1 of 'append_checksum' discards 'const' qualifier from pointer target type [-Wdiscarded-qualifiers]
  164 |     append_checksum(pps_enable_command, command_len);
      |                     ^~~~~~~~~~~~~~~~~~
/home/matthewf/esp/gnss_pss_processing/main/main.c:130:31: note: expected 'uint8_t *' {aka 'unsigned char *'} but argument is of type 'const uint8_t *' {aka 'const unsigned char *'}
  130 | void append_checksum(uint8_t *command, size_t len) {
      |                      ~~~~~~~~~^~~~~~~
[3/9] No install step for 'bootloader'
ninja: build stopped: subcommand failed.
